# TDA-ALG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake
include/: read_filtration.hpp
resources/: mobius_strip.txt  square_filtration.txt
src/: barcode_filtration.cpp  generate_filtration.cpp  read_filtration.cpp
